# musicmove

./: .gitignore  CMakeLists.txt  README.md  TODO  configure.ac  package.nix
data/file_formats/: chirp.easytag.flac
src/: Makefile.am  config.hpp.in  context.hpp  format.cpp  format.hpp  format_easytag.cpp  format_mock.cpp  format_script.cpp  format_test.cpp  metadata.cpp  metadata.hpp  metadata_base.hpp  metadata_flac.hpp  metadata_impl.hpp  metadata_mock.cpp  metadata_mp4.hpp  metadata_mpeg.hpp  metadata_ogg_vorbis.hpp  metadata_test.cpp  move.cpp  move.hpp  move_test.cpp  musicmove.cpp  script_runner.cpp  script_runner.hpp  script_runner_test.cpp
testdata/file_formats/: 02-chirp.easytag.m4a  chirp.min.easytag.01.flac
testdata/metadata/: chirp.min.easytag.02.m4a
testdata/script_runner/: 01_staticvalue.chai  03_tokens.chai  04_tags.chai
